--- a/src/content/blog/做题记录.mdx
+++ b/src/content/blog/做题记录.mdx
@@ -272,3 +272,26 @@ $$
 #### CF Round 1060
 
 [Link](https://www.cnblogs.com/xguagua/p/19152363)
+
+### 10.21
+
+#### A 小 h 学步
+
+你发现每一个向量的贡献是独立的，所以我们只需要求出每个向量的贡献再乘上方案数就行，方案数就是剩下 $n - 1$ 行任选，即 $n ^ {n - 1}$。
+
+<p style = "display: none;">为什么我会把 n 写成 d 挂了 100 啊艹</p>
+
+#### B 小球进洞
+
+首先能想到一个 $\Omicron(n m ^ 2) $ 的 DP，就是直接树形 DP，从子树转移过来的时候枚举边的洞数。
+
+但是显然过不了，考虑优化。我们发现如果只考虑不同的洞，最多只有 $\Omicron(\text{size} _ u)$ 种，所以我们设 $dp _ {u,j}$ 表示以 $u$ 为根的子树内的球进了 $j$ 个不同的洞。
+
+我们先直接将子节点卷起来，再考虑 $u$ 的贡献，则先有 $dp _ {u,i + j} = \sum \limits _ {v,u \in \text{Son}(u)} dp _ {u,i} \times dp _ {w,j}$。
+
+然后分讨，考虑 $u$ 自身的贡献：
+
+- $u$ 落进原有的洞里，则 $dp _ {u,i} \gets dp _ {u,i} \times i$
+- $u$ 落进 $u$ 子树内一个新的洞里，则会新增一个洞，落在子树内的概率是 $\frac{\text{size} _ u - 1}{n - 1}$，则有 $dp _ {u,i} \gets dp _ {u,i - 1} \times \frac{\text{size} _ u - 1}{n - 1}$
+
+然后考虑最后的答案，我们先从所有坑中选出 $i$ 个点，然后因为是不重复的所以要乘上 $i !$，所以答案是 $\sum dp _ {1,i} \times C _ m ^ i \times i!$。
