--- a/src/content/blog/日寄25.10.mdx
+++ b/src/content/blog/日寄25.10.mdx
@@ -94,3 +94,22 @@ S 组都只能拿 190 可以退役了（
 - **不要用 SPFA 求最短路，判负环可以用 DFS SPFA。**
 - 注意空间开销，能开小点就开小点。
 - 能缩点就缩。
+
+### 10.19
+
+打 CF，做的依托但还是涨了分，好奇 CF 的表现怎么评的。
+
+这场感觉策略性很强，想不到 qwq。
+
+### 10.20
+
+补题，C2 的策略真的天才。
+
+- 数论题可以从质因子的角度来思考问题
+
+### 10.21
+
+挂了 100，气炸了。
+
+- 注意你的式子里面到底是什么，不要像今天这样把 $n ^ {n - 1}$ 写成 $d ^ {n - 1}$
+- DP 加强
