--- a/src/content/blog/做题记录.mdx
+++ b/src/content/blog/做题记录.mdx
@@ -288,10 +288,24 @@ $$
 但是显然过不了，考虑优化。我们发现如果只考虑不同的洞，最多只有 $\Omicron(\text{size} _ u)$ 种，所以我们设 $dp _ {u,j}$ 表示以 $u$ 为根的子树内的球进了 $j$ 个不同的洞。
 
 我们先直接将子节点卷起来，再考虑 $u$ 的贡献，则先有 $dp _ {u,i + j} = \sum \limits _ {v,u \in \text{Son}(u)} dp _ {u,i} \times dp _ {w,j}$。
-
+石头人
 然后分讨，考虑 $u$ 自身的贡献：
 
 - $u$ 落进原有的洞里，则 $dp _ {u,i} \gets dp _ {u,i} \times i$
 - $u$ 落进 $u$ 子树内一个新的洞里，则会新增一个洞，落在子树内的概率是 $\frac{\text{size} _ u - 1}{n - 1}$，则有 $dp _ {u,i} \gets dp _ {u,i - 1} \times \frac{\text{size} _ u - 1}{n - 1}$
 
 然后考虑最后的答案，我们先从所有坑中选出 $i$ 个点，然后因为是不重复的所以要乘上 $i !$，所以答案是 $\sum dp _ {1,i} \times C _ m ^ i \times i!$。
+
+### 10.22
+
+#### A 石头人
+
+我们先对 $a$ 做前缀和，记 $sum _ {i} = \sum \limits _ {j = 1} ^ i a _ j$，则限制就是 $sum _ n - (sum _ r - sum _ {l - 1}) \ge k \Rightarrow sum _ {l - 1} \ge k + sum _ r - sum _ n $，则可以直接枚举 $sum _ r$，再将下标小于 $r$ 的所有值加入一个 ```set``` 里面，然后就直接查询大于 $k + sum _ r - sum _ n$ 最大的 $sum$ 即可。
+
+#### B 炒鱿鱼
+
+我们考虑对于一个人入职的那天与被开除的那天连边，表示这两天人事不能相同，则原问题转化为图的染色问题。
+
+首先我们发现，因为这个序列 LIFO 的性质，开掉一段人，会把他前面所有人全部开掉，而开掉的人不能被再次连边，所以染色数最大的情况就是 $u$ 自己向前面一个点 $v$ 连边，并且后面有个点 $w$ 同时向 $u,v$ 连边。这个时候染色的颜色数最大，是 $3$。
+
+然后考虑怎么构造方案，我们对于每个连通块，随便找一个点当作起点，然后第一遍循环，遍历所有邻居标记邻居不能和 $u$ 同色，然后第二遍循环，我们去确定已经可以确定颜色的邻居的颜色，然后用这个邻居去确定其他点的颜色。第三遍循环我们确定不能确定颜色的邻居的颜色，这个时候我们要让这个颜色尽可能小。
