--- a/src/content/blog/日寄25.10.mdx
+++ b/src/content/blog/日寄25.10.mdx
@@ -113,3 +113,13 @@ S 组都只能拿 190 可以退役了（
 
 - 注意你的式子里面到底是什么，不要像今天这样把 $n ^ {n - 1}$ 写成 $d ^ {n - 1}$
 - DP 加强
+
+### 10.22
+
+模拟赛，基本符合预期。
+
+T2 真没想到是图染色，图论也得着重复习了。
+
+#### 10.23
+
+补题，把之前缺的一些题都补得基本差不多了。
