--- a/src/content/blog/二分.mdx
+++ b/src/content/blog/二分.mdx
@@ -7,6 +7,7 @@ categories:
 tags:
     - OI
     - 基础算法
+    - 大数学照亮世界
 ---
 
 ~~不要问我为什么写，考试考了没想出来~~
@@ -51,3 +52,11 @@ ans = l;
 退出条件变为 $r - l \lt eps$，其中 $eps \to 0$。
 
 虽然是基础算法，但用的挺广的，题型变化也很灵活，多练。
+
+## 3. 三分
+
+这个更偏数学一点，是拿来求一个单峰或单谷函数的极值的。
+
+我们考虑一个函数取得极大值的充要条件，就是在极值点导数为 $0$。某些情况下我们可以用手动求导加二分来求出极值点，但是更多的时候，是没有给你可以求导的解析式的。
+
+这个时候，我们从导数的定义入手，就是 $\frac{\text{d}}{\text{d} x} f(x) = \lim \limits _ {\text{d} x \to 0} \frac{f(x + \text{d} x) - f(x)}{\text{d}x} $，所以，我们只需要提前确定一个 $\text{d}x$，然后二分一个点 $mid$，对$mid - \text{d}x,mid + \text{d}x$都求值，然后比较两个值的差。如果一大一小则找到了解，否则比较差的大小缩短边界，由零点存在定理，这样做是对的。又因为单峰或单谷函数的导数有单调性，所以是对的。
