--- a/src/content/blog/日寄25.10.mdx
+++ b/src/content/blog/日寄25.10.mdx
@@ -123,3 +123,11 @@ T2 真没想到是图染色，图论也得着重复习了。
 #### 10.23
 
 补题，把之前缺的一些题都补得基本差不多了。
+
+### 10.24
+
+才知道 10.24 是程序员节。
+
+今天接着补题，发现有些知识点已经忘了，所以真得理一份复习清单出来了。
+
+思维还是欠缺啊。
