--- a/src/content/blog/做题记录.md
+++ b/src/content/blog/做题记录.md
@@ -60,6 +60,8 @@ import Collapse from "../../components/mdx/Collapse.astro";
 
 ### 10.11
 
+[Link](https://local.cwoi.com.cn:8443/contest/C0771)
+
 #### A 询问
 
 发现这个 $2a - i$ 和 $2b - i$ 的增长率显然大于 $a + i$ 和 $b + i$ 的增长率，所以大胆猜测经过足够多的次数后选取的全是 $2a - i$ 与 $2b - i$。
@@ -107,6 +109,8 @@ import Collapse from "../../components/mdx/Collapse.astro";
 
 ### 10.14
 
+[Link](https://local.cwoi.com.cn:8443/contest/C0772)
+
 #### A Happy·Lovely·Everyday！
 
 我们发现 $\operatorname{popcount}(x \oplus y) = x \oplus y$，并且异或有结合律，于是题面就等价于将原序列分为若干段，对每段求异或和后的本质不同子序列个数。
@@ -139,6 +143,8 @@ import Collapse from "../../components/mdx/Collapse.astro";
 到最底层判断一下 $k$ 是否等于 $0$，如果不等于 $0$ 说明不合法，返回 $O$，否则返回 $I$。
 
 ### 10.15
+
+[Link](https://local.cwoi.com.cn:8443/contest/C0773)
 
 #### A 火
 
@@ -174,6 +180,8 @@ import Collapse from "../../components/mdx/Collapse.astro";
 
 ### 10.16
 
+[Link](https://junior.local.cwoi.com.cn:8443/contest/C0421)
+
 #### A 玩具
 
 第一遍还没读懂题意说是（
@@ -195,6 +203,8 @@ import Collapse from "../../components/mdx/Collapse.astro";
 扩展到二维，我们需要交换矩形的四个边界的指针，找到之后直接交换就行了。
 
 ### 10.17
+
+[Link](https://local.cwoi.com.cn:8443/contest/C0774)
 
 #### A 并非贪心
 
@@ -225,6 +235,8 @@ $$
 观察到 $n \le 10 ^ {10}$，考虑杜教筛。然后 $d$ 的部分整除分块，$f _ {d}$ 的前缀和可以用矩阵快速幂算出来。
 
 ### 10.18
+
+[Link](https://local.cwoi.com.cn:8443/contest/C0775)
 
 #### [A 路径(ABC335E)](https://www.luogu.com.cn/problem/AT_abc335_e)
 
@@ -275,6 +287,8 @@ $$
 
 ### 10.21
 
+[Link](https://local.cwoi.com.cn:8443/contest/C0776)
+
 #### A 小 h 学步
 
 你发现每一个向量的贡献是独立的，所以我们只需要求出每个向量的贡献再乘上方案数就行，方案数就是剩下 $n - 1$ 行任选，即 $n ^ {n - 1}$。
@@ -298,6 +312,8 @@ $$
 
 ### 10.22
 
+[Link](https://local.cwoi.com.cn:8443/contest/C0777)
+
 #### A 石头人
 
 我们先对 $a$ 做前缀和，记 $sum _ {i} = \sum \limits _ {j = 1} ^ i a _ j$，则限制就是 $sum _ n - (sum _ r - sum _ {l - 1}) \ge k \Rightarrow sum _ {l - 1} \ge k + sum _ r - sum _ n $，则可以直接枚举 $sum _ r$，再将下标小于 $r$ 的所有值加入一个 ```set``` 里面，然后就直接查询大于 $k + sum _ r - sum _ n$ 最大的 $sum$ 即可。
@@ -309,3 +325,37 @@ $$
 首先我们发现，因为这个序列 LIFO 的性质，开掉一段人，会把他前面所有人全部开掉，而开掉的人不能被再次连边，所以染色数最大的情况就是 $u$ 自己向前面一个点 $v$ 连边，并且后面有个点 $w$ 同时向 $u,v$ 连边。这个时候染色的颜色数最大，是 $3$。
 
 然后考虑怎么构造方案，我们对于每个连通块，随便找一个点当作起点，然后第一遍循环，遍历所有邻居标记邻居不能和 $u$ 同色，然后第二遍循环，我们去确定已经可以确定颜色的邻居的颜色，然后用这个邻居去确定其他点的颜色。第三遍循环我们确定不能确定颜色的邻居的颜色，这个时候我们要让这个颜色尽可能小。
+
+### 10.25
+
+[Link](https://junior.local.cwoi.com.cn:8443/contest/C0428)
+
+#### A 你脑子呢
+
+> 我脑子呢？
+
+发现你只要让第 $i$ 部最大就行了，所以记 $x _ i = \sum \limits _ {t = 1} ^ n [a _ t \lt a _ i]$，则 $Ans _ i = C _ {x _ i - 1} ^ {k - 1}$。
+
+还有一般情况下，$n \neq m$。
+
+#### B 原题
+
+相等答案为 $0$，这没说的。若一个能整除另一个，则一定可以一遍走到，答案是 $\max\{A,B\}$。对于 $\gcd(A,B) \neq 1$ 的情况，我们可以用一遍走到 $\gcd(A,B)$，再用一遍走到 $B$，答案是 $A + B$。
+
+考虑 $A,B$ 均为质数的情况，则我们可以直接走，也可以先到达 $2$ 再到达 $B$，这两种情况取 $\min$。再推广到互质的情况，我们可以先走到最小质因子处，再走到 $2$，这样会比直接走代价小得多，然后就规约到 $A,B$ 均为质数的情况。
+
+所以我们可以一遍线性筛筛出最小质因子，然后按上面的做就行。
+
+#### C 请输入文本
+
+我们先预处理出 $a _ i$ 能作为前缀最大值的区间，设 $p _ i$ 为 $a _ i$ 左边第一个大于 $a _ i$ 的位置，无则为 $0$。则对于询问 $[L,R]$，考虑每一个位置的贡献。考虑一个 $l$，则贡献是 $[l \gt p _ i]$。这样的 $l$ 可以出现 $R - i + 1$ 次，所以答案是 $\sum \limits _ {i = L} ^ R (i - \max\{ p _ i,L - 1 \})(R - i + 1)$，考虑拆掉这个 $\max$，则答案为 $\sum \limits _ {i = L} ^ R (i - p _ i)(R - i + 1) - \sum \limits _ {i = L} ^ R [p _ i \le L - 1](L - 1 - x _ i)(R - i + 1)$。
+
+前面的一堆全是与询问无关的，可以用前缀和维护。因为前面那堆等于 $(R + 1)\sum \limits _ {i = L} ^ R (i - p _ i) - \sum \limits _ {i = L} ^ R i (i - p _ i)$，所以用前缀和维护 $\sum (i - p _ i),\sum i(i - p _ i)$。后面那一堆可以离线下来，用树状数组来维护。后面那堆等于 $(L - 1)(R + 1)\sum \limits _ {i = L} ^ R [p _ i \le L - 1] - (L - 1)\sum \limits _ {i = L} ^ R [p _ i \le L - 1]i - (R + 1)\sum \limits _ {i = L} ^ R [p _ i \le L - 1]p _ i + \sum \limits _ {i = L} ^ R [p _ i \le L - 1]i \cdot p _ i$，分四块用树状数组维护。
+
+#### D 我爱数数
+
+首先可以想到一个类似填数的 $dp$，但是是 $\Omicron(nm)$ 的并且难以优化。
+
+从填数的角度来看，这一位是否贡献只跟是否相等有关，不跟具体值有关。所以，答案就与 $a _ i$ 的构成无关。
+
+那么就正难则反，考虑这个的反问题，就是有多少个 $b$ 使得没有一个子序列与$a$ 相等。考虑枚举和 $a$ 中的 $i$ 个相等，剩下的只要不和 $a _ i$ 相等就随便填，则最后的答案为 $k ^ m - \sum \limits _ {i = 0} ^ {n - 1} C _ m ^ i (k - 1) ^ {m - i}$。
