--- a/src/content/blog/日寄25.10.mdx
+++ b/src/content/blog/日寄25.10.mdx
@@ -131,3 +131,12 @@ T2 真没想到是图染色，图论也得着重复习了。
 今天接着补题，发现有些知识点已经忘了，所以真得理一份复习清单出来了。
 
 思维还是欠缺啊。
+
+### 10.25
+
+这场 S 太阴了。
+
+T1 把 $n,m$ 打反了挂了 $100$。有个二维数点式子都推出来了就没想到拆 $\max$。
+
+- 注意输入不要写反
+- $\max$ 可以用分类讨论拆掉，就是先钦定一种默认情况，然后再在大于的情况中删去多算的贡献。
