--- a/src/content/blog/做题记录.mdx
+++ b/src/content/blog/做题记录.mdx
@@ -359,3 +359,47 @@ $$
 从填数的角度来看，这一位是否贡献只跟是否相等有关，不跟具体值有关。所以，答案就与 $a _ i$ 的构成无关。
 
 那么就正难则反，考虑这个的反问题，就是有多少个 $b$ 使得没有一个子序列与$a$ 相等。考虑枚举和 $a$ 中的 $i$ 个相等，剩下的只要不和 $a _ i$ 相等就随便填，则最后的答案为 $k ^ m - \sum \limits _ {i = 0} ^ {n - 1} C _ m ^ i (k - 1) ^ {m - i}$。
+
+### 10.27
+
+#### A 玩数字
+
+糖题，暴力枚举就行。
+
+#### B 课程
+
+假定全选 $b _ i$，再替换 $n$ 个 $a _ i$ 即可。
+
+#### C 卡牌
+
+首先我们先把所有 $a _ i$ 加起来对 $B - 1$ 取模，最后可能有余数。这个时候，我们需要让最后的数最大，所以只能删一位，否则多删一定不会比删一位更优，显然会直接删掉一个最后的余数，然后二分找就行。
+
+#### D 排队
+
+你打个表可以发现 $n$ 的答案是卡特兰数的第 $n$ 项，因为模数不是质数所以用卷积式算就行。
+
+#### E 士兵
+
+我们考虑拆掉这个 $\min$，为此我们从高位到低位考虑，按位算贡献。
+
+考虑一个二元组 $(a _ {i,p},b _ {i,p})$，分为以下几种： $(0,0),(0,1),(1,0),(1,1)$。
+
+分类讨论：
+
+- $(0,0)$ 与 $(0,1)$ 或 $(1,1)$ 与 $(1,0)$，贡献为 $a _ i \oplus a _ j$
+- $(0,0)$ 与 $(1,0)$ 或 $(1,1)$ 与 $(0,1)$，贡献为 $b _ i \oplus b _ j$
+- $(0,0)$ 与 $(1,1)$ 或 $(0,1)$ 与 $(1,0)$，无法比较，作为子问题下传。
+
+### 10.28
+
+#### A 排序
+
+打表发现答案为 $\begin{cases} n !,k \gt n \\ k ! \times (k + 1) ^ {n - k},k \le n \end{cases}$。
+
+#### B 重排
+
+我们先做环的问题，也就是求 $\max \{ |a _ n - a _ 1| + \sum \limits _ {i = 2} | a _ i - a _ {i - 1} |\}$。我们先对 $a$ 升序排序，则最优的构造就是 $\{a _ 1,a _ n,a _ 2,a _ {n - 1}, \ldots,a _ {\frac{n}{2}},a _ {\frac{n}{2} + 1}\}$ 或 $\{a _ 1,a _ n,a _ 2,a _ {n - 1}, \ldots,a _ {\frac{n}{2}}\}$。
+
+发现每一个数都能贡献两次，大的数做正贡献，小的数做负贡献。现在考虑删去环新加的那部分贡献，偶数情况很简单，就是 $a _ {\frac{n}{2} + 1} - a _ 1$，而奇数情况要对中位数进行分类讨论，可能减去 $a _ {\frac{n}{2} + 1} - a _ {\frac{n}{2}}$ 或者 $a _ {\frac{n}{2}} - a _ {\frac{n}{2} - 1}$，取这两个里面最小的就行。
+
+所以我们维护前 $\frac{n}{2}$ 大的数之和，前 $\frac{n}{2}$ 小的数之和，前 $\frac{n}{2}$ 小的数中的最大值，前 $\frac{n}{2}$ 大的数中最小的以及中位数，要支持在线插入与查询上述信息，用对顶堆即可。
