--- a/src/content/blog/DP总结1.mdx
+++ b/src/content/blog/DP总结1.mdx
@@ -11,7 +11,7 @@ tags:
 
 ~~别问我为什么先写背包~~
 
-## 0.状态定义 & 基础方程
+### 0.状态定义 & 基础方程
 
 定义 $dp _ {i,j}$ 为考虑前 $i$ 个物品，在体积小于等于 $j$ 的情况下，可以得到的最大价值。对于每个物品，有取和不取两种选法，同时可以从 $[v _ i,V]$ 中任意一个值转移而来。于是，有 DP 方程：
 
@@ -25,7 +25,7 @@ $$
 dp _ {j} = \max(dp _ j , dp _ {j - v + i} + w _ i)
 $$
 
-## 1. 0-1背包
+### 1. 0-1背包
 
 如上，答案为 $dp _ {n,V}$。
 
@@ -46,7 +46,7 @@ for(int i = 1;i <= n;i++)
 ans = dp[n][V];
 ```
 
-## 2. 完全背包
+### 2. 完全背包
 
 刚刚的错误做法就是这里的正确做法，因为本来就可以多次取。
 
@@ -60,7 +60,7 @@ for(int i = 1;i <= n;i++)
 ans = dp[n][V];
 ```
 
-## 3. 多重背包
+### 3. 多重背包
 
 就是一个物品可以取 $k _ i$ 次，并非无限次。
 
@@ -68,13 +68,13 @@ ans = dp[n][V];
 
 但是，时间复杂度是 $\Omicron(n \sum _ {i = 1} ^ n k _ i)$ ，数据大点 T 飞。
 
-### 优化 ：二进制分组优化
+#### 优化 ：二进制分组优化
 
 注意到，$ \forall x \in \N $，有 $x = \sum 2 ^ i \times b _ i$，其中 $b _ i \in \{0,1\}$。所以，选 $2 ^ j$ 个 $A _ i$ 物品，等价于选一个由 $2 ^ j$ 个 $A _ i$ 物品组成的物品，然后跑0-1背包就不会爆炸了。
 
 ~~还可以单调栈/单调队列优化，但我不想写，都 log 了就没必要了吧~~
 
-## 4.多维费用
+### 4.多维费用
 
 0-1背包优化前状态改为 $dp _ {i,j,k}$，然后就没了
 
@@ -90,7 +90,7 @@ for(int i = 1;i <= n;i++)
 ans = dp[V][C];
 ```
 
-## 5.分组背包
+### 5.分组背包
 
 每一组跑一遍 0-1 背包，然后统计答案和。
 
@@ -105,13 +105,13 @@ for (int k = 1; k <= ts; k++)          // 循环每一组
 
 ```
 
-## 6.有依赖的背包
+### 6.有依赖的背包
 
 ~~树形 DP 那里再填坑吧~~
 
 [插个传送锚点](/blog/dp总结2/)
 
-## 7.结语
+### 7.结语
 背包类牢记基础方程（内容+推导）
 
 $$
