--- a/src/content/blog/DP总结2.mdx
+++ b/src/content/blog/DP总结2.mdx
@@ -9,25 +9,25 @@ tags:
     - 动态规划
 ---
 
-## 0.定义
+### 0.定义
 
 顾名思义就是在树上的 DP。
 
-## 1.转移方式
+### 1.转移方式
 
-这种 DP 不能用普通的方式转移，一般是通过 DFS 来实现转移，因为他的状态转移方程一般和子节点有关，所以可以计算完子节点的答案后合并到父节点。
+这种 DP 不能用普通的方式转移，一般是通过 DFS 来实现转移，因为他的状态转移方程一般和子结点有关，所以可以计算完子结点的答案后合并到父结点。
 
-一般来说，答案是根节点的答案
+一般来说，答案是根结点的答案
 
 <p style = "color: #ff4444;">但是，这个树不一定是有根树</p>
 
-所以有些时候得扫一遍，求出以每个节点为根的答案。
+所以有些时候得扫一遍，求出以每个结点为根的答案。
 
 题型很多，基本可以和其他任何一种 DP 融合起来。
 
-## 2.类型 & 例题
+### 2.类型 & 例题
 
-### 1.朴素版本
+#### 1.朴素版本
 
 [Eg.1 最大子树和](https://www.luogu.com.cn/problem/P1122)
 
@@ -43,7 +43,7 @@ $$
 
 [代码实现](https://www.luogu.com.cn/record/189893540)
 
-### 2.树上背包（有依赖的背包）
+#### 2.树上背包（有依赖的背包）
 
 填了 24.11.19 背包 DP 的坑
 
@@ -66,7 +66,7 @@ void DP(int u,int fa)
 }
 ```
 
-上述代码中，$j$ 表示给以这个节点为根的子树分配多少容量，$k$ 表示给该节点的子节点为根的子树分配多少容量。
+上述代码中，$j$ 表示给以这个结点为根的子树分配多少容量，$k$ 表示给该结点的子结点为根的子树分配多少容量。
 
 [Eg.2 二叉苹果树](https://www.luogu.com.cn/problem/P2015)
 
@@ -94,15 +94,15 @@ void DP(int u,int fa)
 
 [代码实现](https://www.luogu.com.cn/record/191121210)
 
-### 3.换根DP
+#### 3.换根DP
 
-就是根节点的修改会导致一些变化。
+就是根结点的修改会导致一些变化。
 
 [Eg.3 STA-Station](https://www.luogu.com.cn/problem/P3478)
 
 首先，我们需要一遍 DFS 来处理子树大小。
 
-然后，令 $dp _ u$ 为当以 $u$ 为根时，节点的深度和。
+然后，令 $dp _ u$ 为当以 $u$ 为根时，结点的深度和。
 
 所以，有 DP 方程:
 
@@ -111,8 +111,8 @@ dp _ v = dp _ u + n - 2 \times size _ v
 $$
 
 因为:
-1. 在 $v$ 的子树上的节点深度减少 $1$，深度和减少了 $size _ v$
-2. 不在 $v$ 的子树上的节点深度增加了 $1$，则深度和减少了 $n - size _ v$
+1. 在 $v$ 的子树上的结点深度减少 $1$，深度和减少了 $size _ v$
+2. 不在 $v$ 的子树上的结点深度增加了 $1$，则深度和减少了 $n - size _ v$
 
 所以最后再扫一一遍就可以求出答案了。
 
