--- a/src/content/blog/DP总结5.mdx
+++ b/src/content/blog/DP总结5.mdx
@@ -13,9 +13,9 @@ tags:
 
 嘛，既然是概率与期望 DP，还是得先讲概率与期望的。
 
-## 0.概率论
+### 0.概率论
 
-### 概率基本定义
+#### 概率基本定义
 
 我们先给出以下几个符号：
 
@@ -32,7 +32,7 @@ tags:
 
 分布函数：字面意思，表示随机变量是怎么分布的。
 
-### 期望基本定义
+#### 期望基本定义
 
 我认为这就是个加权的概率。
 
@@ -42,13 +42,13 @@ tags:
 
 好了，基本的讲完了，剩下的就是 DP 了。
 
-## 1.概率 DP
+### 1.概率 DP
 
 一般，我们会设 $dp _ {S}$ 表示某种限制发生的概率，这种限制是可以从某些其他限制转移过来的，因此是个子问题，就是个 DP。
 
 比如下面这道例题：
 
-### [CF148D](https://codeforces.com/problemset/problem/148/D)
+#### [CF148D](https://codeforces.com/problemset/problem/148/D)
 
 > 袋子里有 $w$ 只白鼠和 $b$ 只黑鼠，公主和龙轮流从袋子里抓老鼠。谁先抓到白色老鼠谁就赢，如果袋子里没有老鼠了并且没有谁抓到白色老鼠，那么算龙赢。公主每次抓一只老鼠，龙每次抓完一只老鼠之后会有一只老鼠跑出来。每次抓的老鼠和跑出来的老鼠都是随机的。公主先抓。问公主赢的概率。
 
@@ -65,7 +65,7 @@ tags:
 
 概率 DP 一般是顺推，转移方程一般是大力分类讨论出来的。
 
-## 2.期望 DP
+### 2.期望 DP
 
 这个就很难了，裸的期望 DP 一般是倒着推，并且状态是形如“已经……的期望”。
 
@@ -75,7 +75,7 @@ tags:
 
 先看几道例题：
 
-#### [Ex.1 Luogu P4316](https://www.luogu.com.cn/problem/P4316)
+##### [Ex.1 Luogu P4316](https://www.luogu.com.cn/problem/P4316)
 
 我们先按照套路，设 $dp _ u$ 表示已经到达 $u$，到终点的期望路径长度。
 
@@ -85,7 +85,7 @@ tags:
 
 我们在跑拓扑排序的同时计算 $dp _ u$ 就行了。
 
-#### Ex.2 校内 2025.3.17 模拟赛 T2
+##### Ex.2 校内 2025.3.17 模拟赛 T2
 
 > 给你一个数列 $A$，满足 $A$ 无限长，并且 $A _ i \in [1,m] \cap \Z$ 且等概率随机。求给定长为 $n$ 的序列 $B$ 在 $A$ 中的最小出现位置的期望。
 
@@ -112,7 +112,7 @@ Example Out:
 
 因此，多看多练吧。
 
-## 3. 有后效性 DP
+### 3. 有后效性 DP
 
 有的时候，我们可能推出来一个既跟先前的状态有关，又跟之后的状态有关的方程，放别的题你可能会觉得自己推错了，但这是概率 DP，DP 状态是到达某个状态的概率/期望，我们为什么不用代数方法来解决呢？
 
