--- a/src/content/blog/SparseTable.mdx
+++ b/src/content/blog/SparseTable.mdx
@@ -11,7 +11,7 @@ tags:
 
 
 
-## 0.定义 & 基本思想
+### 0.定义 & 基本思想
 
 ST 表是用来处理**可重复贡献问题**的，即 $x \operatorname{opt} x = x$，且 $opt$ 须有结合律。
 
@@ -19,7 +19,7 @@ ST 表可以来解决区间 $\min/\max/\gcd/\text{lcm} \dots$ 等问题。
 
 基于倍增与 DP 思想，可以做到 $\Theta(n \log n)$ 预处理，$\Theta(1)$ 查询，所以有些时候优于线段树，但是不支持修改。
 
-## 1.实现
+### 1.实现
 
 设 $st _ {i,j}$ 为区间 $[i,i + 2 ^ j - 1]$ 的需要维护的值
 可得，$st _ {i,0} = a _ i$。
@@ -32,7 +32,7 @@ ST 表可以来解决区间 $\min/\max/\gcd/\text{lcm} \dots$ 等问题。
 
 都 2025 年了还预处理 ```lg``` 数组？我们可以使用 ```__lg(x)``` 来求出 $\lfloor \log _ 2 x \rfloor$。
 
-## 2.代码模板
+### 2.代码模板
 
 以区间最小值举例：
 
@@ -54,7 +54,7 @@ int query(int l,int r)
 
 ```
 
-## 3. 更优秀的 RMQ
+### 3. 更优秀的 RMQ
 
 因为 ST 表有个 $\Omicron(n \log n)$ 的预处理，在某些毒瘤的眼里还是太慢了，更何况还能套上线性基这种单次复杂度高达 $\Omicron(\log ^ 2 n)$ 的东西，于是我们可以用毒瘤之力打败毒瘤。
 
