--- a/src/content/blog/二项式反演容斥.mdx
+++ b/src/content/blog/二项式反演容斥.mdx
@@ -11,7 +11,7 @@ tags:
 
 import Collapse from "../../components/mdx/Collapse.astro";
 
-## 0.二项式反演
+### 0.二项式反演
 
 ~~鬼知道发现它的人怎么分析出来的~~
 
@@ -42,7 +42,7 @@ $$
 所以，当且仅当 $j = n$ 时，$C _ n ^ j g _ j[j = n] \neq 0 = g _ n$，得证。 
 </Collapse>
 
-## 1.容斥原理
+### 1.容斥原理
 
 $$
 | \bigcup _ {i = 1} ^ n S _ i| = \sum _ {i = 1} ^ n (-1) ^ {i + 1} \sum _ {|T| = i}|\bigcap _ {S \in T} S|
@@ -67,9 +67,9 @@ $$
 所以，$n = 1,2,3$ 时，结论成立，进而可以归纳出$\forall n \ge 1$，结论均成立。
 </Collapse>
 
-## 2.习题
+### 2.习题
 
-### [P10986 2023](https://www.luogu.com.cn/problem/P10986)
+#### [P10986 2023](https://www.luogu.com.cn/problem/P10986)
 
 知识点：容斥原理
 
@@ -83,6 +83,6 @@ $$
 
 然后这个就是上面的二项式反演的第二种形式，那直接丢反演，得到 $ g(x) = \sum _ {i = x} ^ n (-1) ^ {i - x}  C _ i ^ x f(i) $，则 $ g(m) = \sum _ {i = m} ^ {\frac{n}{4}} (-1) ^ {i - m} C _ i ^ m f(i) = \sum _ {i = m} ^ {\frac{n}{4}} (-1) ^ {i - m} C _ i ^ m  10 ^ {n - 4m} C _ {n - 3m} ^ m $，就 AC 了。
 
-## 3.总结
+### 3.总结
 
 我觉得这个东西难就难在可以和 DP 深度融合，~~我最差的就是 DP~~，其实有些在 **恰好** 与 **至少/之多** 之间转换的可以用子集反演来做，但是这就不是这篇该讲的了。
