--- a/src/content/blog/做题记录.mdx
+++ b/src/content/blog/做题记录.mdx
@@ -172,7 +172,7 @@ import Collapse from "../../components/mdx/Collapse.astro";
 
 设 $dp _ {u,i}$ 表示以 $u$ 为根的子树，需要染的颜色是 $i$，$i = 0$ 表示不需要染色。则 $\forall i \in [1,n],dp _ {u,i} = \prod \limits _ {v \in \text{Son}(u)} (dp _ {v,0} + dp _ {v,i}) - \prod \limits _ {v \in \text{Son}(u)} dp _ {v,0}$，表示 $v$ 可以被染完也可以需求 $i$ 颜色，最后减去全部染完色的方案。
 
-对于 $i = 0$，有 $dp _ {u,0} = (m + 1) \prod \limits _ {v \in \text{Son}(u)} dp _ {v,0} + \sum \limits _ {i = 1} ^ m dp _ {u,i}$，表示子节点全部染完色，$u$ 颜色任意，后面表示将需求为 $i$ 的 $u$ 从无色变为 $i$。
+对于 $i = 0$，有 $dp _ {u,0} = (m + 1) \prod \limits _ {v \in \text{Son}(u)} dp _ {v,0} + \sum \limits _ {i = 1} ^ m dp _ {u,i}$，表示子结点全部染完色，$u$ 颜色任意，后面表示将需求为 $i$ 的 $u$ 从无色变为 $i$。
 
 直接做是 $\Omicron(n ^ 2)$ 的，考虑优化，我们可以用线段树合并做到 $\Omicron(n \log n)$。
 
@@ -256,7 +256,7 @@ $$
 
 #### [C 计数(ABC284G)](https://www.luogu.com.cn/problem/AT_abc284_g)
 
-发现只能一条路走到底，而走到环就出不去了，所以至多有 $1$ 个环，而这个图有 $n$ 个点 $n$ 条边，所以一个联通块有且仅有一个环。
+发现只能一条路走到底，而走到环就出不去了，所以至多有 $1$ 个环，而这个图有 $n$ 个点 $n$ 条边，所以一个连通块有且仅有一个环。
 
 我们设 $B _ {i,l + 1}$ 与 $B _ {i,p}$ 开始重复，则贡献显然是 $p - 1$。
 
@@ -301,7 +301,7 @@ $$
 
 但是显然过不了，考虑优化。我们发现如果只考虑不同的洞，最多只有 $\Omicron(\text{size} _ u)$ 种，所以我们设 $dp _ {u,j}$ 表示以 $u$ 为根的子树内的球进了 $j$ 个不同的洞。
 
-我们先直接将子节点卷起来，再考虑 $u$ 的贡献，则先有 $dp _ {u,i + j} = \sum \limits _ {v,u \in \text{Son}(u)} dp _ {u,i} \times dp _ {w,j}$。
+我们先直接将子结点卷起来，再考虑 $u$ 的贡献，则先有 $dp _ {u,i + j} = \sum \limits _ {v,u \in \text{Son}(u)} dp _ {u,i} \times dp _ {w,j}$。
 石头人
 然后分讨，考虑 $u$ 自身的贡献：
 
@@ -403,3 +403,29 @@ $$
 发现每一个数都能贡献两次，大的数做正贡献，小的数做负贡献。现在考虑删去环新加的那部分贡献，偶数情况很简单，就是 $a _ {\frac{n}{2} + 1} - a _ 1$，而奇数情况要对中位数进行分类讨论，可能减去 $a _ {\frac{n}{2} + 1} - a _ {\frac{n}{2}}$ 或者 $a _ {\frac{n}{2}} - a _ {\frac{n}{2} - 1}$，取这两个里面最小的就行。
 
 所以我们维护前 $\frac{n}{2}$ 大的数之和，前 $\frac{n}{2}$ 小的数之和，前 $\frac{n}{2}$ 小的数中的最大值，前 $\frac{n}{2}$ 大的数中最小的以及中位数，要支持在线插入与查询上述信息，用对顶堆即可。
+
+### 10.29
+
+#### A ⼗字斩
+
+直接 ```map``` 维护。
+
+#### B ⼤富翁
+
+首先变形一下，假设全部时间每个都能赚 $2$ 金币，再用总贡献减去非法贡献。
+
+将购买和装修视作两个相互独立的事件，每个的价值都是 $1$，所以有 $Ans = 2nm - \min \{ t _ i \times k _ i \}$，其中 $t _ i$ 表示需要的时间，$k$ 表示完成该事件前没有完成的事件总数。
+
+考虑怎么最小化后面那一堆，显然我们需要尽量让小的数在前面，大的数在后面。对于 $a _ {i,0} \le a_ {i,1}$ 的性质，我们发现拆开后限制被天然满足，所以直接拆开算就行。
+
+再考虑 $a _ {i,0} \gt a _ {i,1}$ 的部分，因为小的需要尽量靠前而大的需要尽量靠后，所以两个一定是贴在一起的，我们把他们合在一起考虑。
+
+我们考虑在何处放入这一对 $(x,y)$，考虑计算差，设现在序列为 $p$，前缀和序列为 $s$，则有 $\Delta = \min \limits _ {i = 0} ^ k \{ 2 s _ i +  (k + 1 - i) x + (k - i) y\} = \min \limits _ i \{ 2 s _ i - i (x + y) \} + (k + 1) x + ky = \min \limits _ i \{ \sum \limits _ j (2p _ j - (x + y)) \} + (k + 1) x + ky$。
+
+最小的时候一定有 $2 p _ i \le (x + y) \rightarrow p _ i \le \frac{x + y}{2}$，因为再大 $2 p _ i - (x + y)$ 就是正的，做负贡献，所以拿平均数去排序就行了。
+
+#### C 联谊舞会
+
+首先转成人 $i$ 的两个位置，就是对置换取逆。
+
+然后你发现，$i,j$ 能交友的条件就是 $a _ i \lt a _ j \wedge b _ i \gt b _ j$，二维偏序形式，排序消去一维，则转为 $i \lt j \wedge b _ i \gt b _ j$，所以一个朋友圈等价于对于任意 $i \lt j,i,j \in S$，有 $b _ i \gt b _ j$，求个最长下降子序列就行了。
