--- a/src/content/blog/分块.mdx
+++ b/src/content/blog/分块.mdx
@@ -72,7 +72,7 @@ tags:
 
 这个东西可以做到 $\Omicron(\sqrt{n})$ 支持插入，删除，查询，分裂，合并，相当于根号算法里面的的链表/平衡树。
 
-实现就是一个链表，链表每个节点代表原序列的一个块，块的大小不超过 $2B$，一般存储一个数组。如果超过 $2B$ 就分裂，分裂为两个大小为 $B$ 的块，以此来保证复杂度。
+实现就是一个链表，链表每个结点代表原序列的一个块，块的大小不超过 $2B$，一般存储一个数组。如果超过 $2B$ 就分裂，分裂为两个大小为 $B$ 的块，以此来保证复杂度。
 
 插入就像链表一样，直接遍历来找到对应的位置，然后插入到内层数组中，删除也一样。明显的，你可以在块里面再维护些东西来支持带插区间操作。
 
