--- a/src/content/blog/快速幂.mdx
+++ b/src/content/blog/快速幂.mdx
@@ -10,7 +10,7 @@ tags:
 
 ~~这矩阵的 LaTeX 是真 nm 难打~~
 
-## 0.基本原理
+### 0.基本原理
 
 知周所众，朴素地计算 $a ^ b$ 的时间复杂度是 $\Omicron(b)$ 的，在某些数据下会 TLE，这个时候就得用快速幂 ~~（不然我写这个干吗）~~。
 
@@ -24,7 +24,7 @@ tags:
 
 这里使用了倍增和运算的 **结合律**。
 
-### 模板
+#### 模板
 
 ~~这是真模板~~
 
@@ -44,9 +44,9 @@ T qpow(T b,int p)
 }
 ```
 
-## 1.矩阵快速幂
+### 1.矩阵快速幂
 
-### 1.板子
+#### 1.板子
 
 以斐波那契数列为例
 
@@ -83,7 +83,7 @@ $$
 
 为什么要从 $F _ 2$ 开始转移呢？因为 $f _ i$ 在 $i \gt 0$ 时 才有意义，所以 $F$ 从第 $2$ 项开始才有意义。
 
-### 2.图论中邻接矩阵的幂的意义
+#### 2.图论中邻接矩阵的幂的意义
 
 [证明见此](https://blog.csdn.net/u010504064/article/details/39781709?utm_source=blogxgwz0)，懒得写了。
 
@@ -91,7 +91,7 @@ $$
 
 总结就是 $G ^ n _ {i,j} $ 为 $i$ 到 $j$ 经过 $n$ 条边的方案数。
 
-#### 推广
+##### 推广
 
 我们定义 $C = A \times B,C _ {i,j} = \min _ {i = 1} ^ k (A _ {i,k} + B _ {k,j})$ 
 
@@ -103,7 +103,7 @@ $$
 
 上述方法的底层逻辑都是 DP，所以，我们就可以得出矩阵快速幂的另一种用法，优化 DP。
 
-## 2.置换
+### 2.置换
 
 定义一个置换群上的置换如下：
 
@@ -115,7 +115,7 @@ $$
 
 因为在置换 **群** 上，满足结合律，所以就可以用快速幂计算了。
 
-### 置换开根
+#### 置换开根
 
 置换在置换群上有乘法逆元，则置换 $\sigma = \begin{pmatrix} 1 & 2 & \ldots & n a _ 1 & a _ 2 & \ldots & a _ n \end{pmatrix}$ 的逆 $\sigma ^ {-1}$ 为 $\begin{pmatrix} a _ 1 & a _ 2 & \ldots & a _ n 1 & 2 & \ldots & n \end{pmatrix}$
 
