--- a/src/content/blog/数据结构P1.mdx
+++ b/src/content/blog/数据结构P1.mdx
@@ -9,25 +9,25 @@ tags:
     - 数据结构
 ---
 
-## 0.树状数组
+### 0.树状数组
 
-### `lowbit` 运算
+#### `lowbit` 运算
 
 定义一个二进制数 $x$ 最低位的 $1$ 与后面的 $0$ 组成的 $100 \ldots 0$ 为 $lowbit(x)$。
 
 其求法为 $x \& -x$
 
-### 树状数组
+#### 树状数组
 
-树状数组每个节点维护的是原数组的一段和（不一定是加法的和），先看一张图：
+树状数组每个结点维护的是原数组的一段和（不一定是加法的和），先看一张图：
 
 ![](/image/fenwick.png)
 
-这张图就是树状数组一个节点维护的和。
+这张图就是树状数组一个结点维护的和。
 
 那到底怎么维护的呢？实际上，$c _ x$ 维护的是 $[a _ {x - lowbit(x) + 1},a _ x]$ 的信息。
 
-#### 区间查询
+##### 区间查询
 
 我们发现，$[a _ 1,a _ x]$ 的前缀和可以在树状数组上在 $\Omicron(\log x)$ 的复杂度内得出。因为我们可以把其拆成几段，然后用树状数组求出。
 
@@ -48,7 +48,7 @@ inline int query(int pos)
 
 所以任意的 $[l,r]$ 就可以通过查询 $[1,r] - [1,l - 1]$ 得出。
 
-#### 单点修改
+##### 单点修改
 
 前面说了，树状数组维护的是一段区间。所以单点修改需要对涉及的区间全部修改一下。
 
@@ -62,7 +62,7 @@ inline void modify(int pos,int x)
 }
 ```
 
-#### 区间修改
+##### 区间修改
 
 这个需要结合差分的知识。
 
@@ -89,17 +89,17 @@ inline int query(int pos) //a[1]...a[pos]
 } 
 ```
 
-#### 复杂度
+##### 复杂度
 
 空间复杂度 $\Theta (n)$，时间复杂度 $\Theta(\log n)$，并且常数大大优于线段树，码量大大少于线段树。
 
-#### 实质
+##### 实质
 
 就像线段树维护的是一个幺半群，树状数组同理，事实上，树状数组可维护的信息是线段树的子集。
 
 所以，树状数组也可以维护 $\gcd,\max,$ 乘法等信息。
 
-### 二维树状数组
+#### 二维树状数组
 
 别名树状数组套树状数组。
 
@@ -107,7 +107,7 @@ inline int query(int pos) //a[1]...a[pos]
 
 然后，外层的树状数组管辖区间是一致的。
 
-#### 二维差分
+##### 二维差分
 
 $d _ {i,j} = a _ {i,j} - a _ {i - 1,j} - a_ {i,j - 1} + a _ {i - 1,j - 1} $
 
@@ -156,7 +156,7 @@ inline int query(int a,int b,int c,int d)
 }
 ```
 
-### 权值树状数组
+#### 权值树状数组
 
 这个东西可以解决全局 $k$ 小值，二维偏序问题
 
@@ -166,32 +166,32 @@ inline int query(int a,int b,int c,int d)
 
 然后树状数组就差不多了，剩下的线段树那讲。
 
-## Addition. Tricks
+### Addition. Tricks
 
-### 动态开点
+#### 动态开点
 
-其实就是一个存储的 Trick，在点分树里面，可能需要对每个节点都开树状数组，如果直接开是 $\Omicron(n ^ 2)$ 的空间复杂度。
+其实就是一个存储的 Trick，在点分树里面，可能需要对每个结点都开树状数组，如果直接开是 $\Omicron(n ^ 2)$ 的空间复杂度。
 
 这个时候，我们就可以把静态数组换成 `vector`，根据需要来开。
 
 你甚至可以直接继承 `vector<int>` 来封装一个动态开点树状数组。
 
-### 线性建树
+#### 线性建树
 
 因为树状数组管辖的是 $[x - lowbit(x) + 1,x]$ 的信息，所以我们可以预处理前缀数组 $sum$，然后用 $sum$ 来计算树状数组每一个位置的值。
 
-### 树状数组套树
+#### 树状数组套树
 
 如果你学过主席树，那你应该知道，线段树是可以进行前缀和的。
 
 能方便的维护前缀和的数据结构有什么？树状数组！
 
-具体就是树状数组每个节点存的是你需要的一种树，修改就像普通树状数组一样，在对应点位修改。
+具体就是树状数组每个结点存的是你需要的一种树，修改就像普通树状数组一样，在对应点位修改。
 
-查询可以先把所有的根节点存下来，然后在内层树操作的时候同时操作所有节点。
+查询可以先把所有的根结点存下来，然后在内层树操作的时候同时操作所有结点。
 
 里面什么都能套，个人经验：里面套线段树空间开销会大一点，套平衡树时间开销会大一点。
 
-### 维护后缀的树状数组
+#### 维护后缀的树状数组
 
 可以直接把普通树状数组的修改和查询的枚举方式互换一下。
