--- a/src/content/blog/数据结构P4.mdx
+++ b/src/content/blog/数据结构P4.mdx
@@ -12,35 +12,35 @@ tags:
 
 说是字符串的，其实单独用一般不会拿来维护字符串，用于字符串的大多是 ACAM。
 
-## 0.结构
+### 0.结构
 
-顾名思义，字典树肯定是一棵树。除根节点外每个节点存储的是一个字符（或者在边上存，点上不存），从根节点到任意一点的路径就是一个字符串。
+顾名思义，字典树肯定是一棵树。除根结点外每个结点存储的是一个字符（或者在边上存，点上不存），从根结点到任意一点的路径就是一个字符串。
 
 大概长这样：
 
 ![From oi-wiki.org](https://oi-wiki.org/string/images/trie1.png)
 
-一般会对每个节点记录是否是一个字符串的结尾。
+一般会对每个结点记录是否是一个字符串的结尾。
 
-## 1.应用
+### 1.应用
 
-### 检索字符串
+#### 检索字符串
 
-我们从根节点一路往下走，如果没有需要的下一个字符，就返回没找到。如果找到了最后，就返回是否是结尾。
+我们从根结点一路往下走，如果没有需要的下一个字符，就返回没找到。如果找到了最后，就返回是否是结尾。
 
-### 01-Trie
+#### 01-Trie
 
 就是字符集只有 $0,1$ 的字典树，可以维护和异或有关的信息。
 
-#### [Eg. 最长异或路径](https://www.luogu.com.cn/problem/P4551)：维护异或极值
+##### [Eg. 最长异或路径](https://www.luogu.com.cn/problem/P4551)：维护异或极值
 
 我们可以把路径 $(u,v)$ 的查询拆成 $(root,u) \oplus (root,v)$，同时记录异或前缀和。
 
-先把所有异或前缀和插入到字典树中，查询 $x$ 的某一位时，采取贪心的策略，优先选相反的节点，然后向下递归。
+先把所有异或前缀和插入到字典树中，查询 $x$ 的某一位时，采取贪心的策略，优先选相反的结点，然后向下递归。
 
-#### 维护异或和
+##### 维护异或和
 
-##### 插入 & 删除
+###### 插入 & 删除
 
 一般是从低位向高位维护。
 
@@ -100,7 +100,7 @@ inline void remove(int rt,int x,int dep)
 }
 ```
 
-##### 全局加一
+###### 全局加一
 
 我们思考二进制下的加一过程：
 
@@ -118,15 +118,15 @@ inline void add(int rt)
 }
 ```
 
-#### 进阶操作
+##### 进阶操作
 
 我们可以在把 $w$ 看作出现次数，这样，我们就可以做一些更神奇的操作。
 
-##### Trie 合并
+###### Trie 合并
 
-类似线段树合并，传入两个节点 $L,R$，若有至少一个为 $0$ 则返回另一个。
+类似线段树合并，传入两个结点 $L,R$，若有至少一个为 $0$ 则返回另一个。
 
-否则，合并两个节点的信息，随后向下递归。
+否则，合并两个结点的信息，随后向下递归。
 
 ```cpp
 inline int merge(int L,int R)
@@ -141,9 +141,9 @@ inline int merge(int L,int R)
 }
 ```
 
-##### 可持久化 Trie
+###### 可持久化 Trie
 
-类似主席树，我们每次记录修改的一条链，然后更新根节点。
+类似主席树，我们每次记录修改的一条链，然后更新根结点。
 
 下面是可以支持查询区间异或最大值的可持久化 Trie。
 
@@ -195,6 +195,6 @@ inline int query(int u,int v,int val)
 }
 ```
 
-## 结尾
+### 结尾
 
 用在 DS 方面的就差不多了，放在字符串里面，还可以拿来跑 ACAM，或者构建后缀字典树解决其他问题。
