--- a/src/content/blog/日寄24.11.mdx
+++ b/src/content/blog/日寄24.11.mdx
@@ -125,11 +125,9 @@ upd: 打了个 75pts 的暴力，然后题解写的优化根本不会，寄。
 
 upd 11.25：《致敬传奇耐卡王 ybz》：
 
-![](/999ms.webp)
+![](/image/999ms.webp)
 
 但是我用 ODT 只用了 671ms
-
-$\LARGE{\text{awa}}$
 
 ## 11.23
 
