--- a/src/content/blog/日寄25.01.mdx
+++ b/src/content/blog/日寄25.01.mdx
@@ -182,7 +182,7 @@ DP，但是不会。
 
 #### T4
 
-启发式合并合并联通块，做个 【数据删除】。
+启发式合并合并连通块，做个 【数据删除】。
 
 但是有个树的部分分，骗了 20pts。
 
@@ -381,7 +381,7 @@ $$
 
 <Collapse title = "CFR 998 E">
 
-首先，有没有路径就是联通不联通，所以我们可以考虑维护联通块，可以用并查集方便的维护。
+首先，有没有路径就是联通不联通，所以我们可以考虑维护连通块，可以用并查集方便的维护。
 
 具体的，$ \forall (u,v) \in F$，若 $g _ u \neq g _ v$，则这条边必须删除，并记录答案。
 
