--- a/src/content/blog/点分治.mdx
+++ b/src/content/blog/点分治.mdx
@@ -10,7 +10,7 @@ tags:
 
 好像边分治没什么用，所以不写了。
 
-## 0.定义
+### 0.定义
 
 点分治，说白了就是优化过的暴力 /
 
@@ -18,7 +18,7 @@ tags:
 
 时刻记住，点分治是在无根树上跑的，并且是静态的。
 
-## 1.过程
+### 1.过程
 
 我们首先先指定一个点 $p$ 为根，称作分治中心。
 
@@ -33,7 +33,7 @@ tags:
 
 一般处理这种的方式有先查询再加入，应用容斥原理等。难点就在怎么用 DS 快速维护第一种路径上。
 
-## 2.点分树
+### 2.点分树
 
 我们看这样一个问题
 
@@ -46,7 +46,7 @@ tags:
 
 然后这就是点分树的定义，把每次的分治中心连起来，构建一棵树。
 
-#### 性质
+##### 性质
 
 1. 深度等同于点分治的深度，即 $\Omicron(\log n)$，因此可以在上面跑一些平常会 T 的暴力。
 2. $x,y$ 在**点分树上的 LCA** 一定在**原树**上 $x,y$ 的路径上，即 $dis(x,y) = dis(x,LCA) + dis(LCA,y)$。
@@ -61,7 +61,7 @@ tags:
 
 修改就一路向上跳单点修改就好，因此我们可以直接用树状数组维护。
 
-## 3.总结
+### 3.总结
 
 点分治的主要难点就在如何维护你需要的路径的信息，本身其实并不难。
 
