--- a/src/content/blog/牛顿迭代法.mdx
+++ b/src/content/blog/牛顿迭代法.mdx
@@ -9,7 +9,7 @@ tags:
     - OI
 ---
 
-## 0.结论
+### 0.结论
 
 设 $x _ i$ 是方程 $f(x) = 0$ 的近似解，则有 $x _ {i + 1} = x _ i - \frac{f(x _ i)}{f'(x _ i)}$
 
@@ -29,11 +29,11 @@ double Newton(double x)
 }
 ```
 
-## 1.实例
+### 1.实例
 
 ~~问就是 OI Wiki 没教证明~~
 
-### 求 $\sqrt[k]{n}$
+#### 求 $\sqrt[k]{n}$
 
 构造 $f(x) = x ^ k - n$，则 $f'(x) = kx ^ {k - 1}$
 
