--- a/src/content/blog/ODT.mdx
+++ b/src/content/blog/ODT.mdx
@@ -11,15 +11,15 @@ tags:
 
 ~~看到幸福的随机数据题就该用幸福的珂朵莉树啦~~
 
-## 0.基本定义
+### 0.基本定义
 
 我也不知道 lxl dalao 怎么想出来这种 ~~神仙~~ 的算法的。反正就是在 CF896C 这道题里，数据随机，并且有区间赋值，就可以做了。
 
 其实本质上就是一个 `set` 维护的一段段的颜色，每种操作都是 **暴力处理** 的。
 
-## 1.代码
+### 1.代码
 
-### 定义
+#### 定义
 ```cpp
 struct Chtholly
 {
@@ -38,7 +38,7 @@ set<Chtholly> odt;
 
 还有用 `map` 和手搓链表实现的，但我觉得没什么用，复杂度还不如用 `set`。
 
-### 分裂
+#### 分裂
 
 ```cpp
 iter split(int pos)
@@ -59,7 +59,7 @@ iter split(int pos)
 
 一眼可以看出，分裂肯定会导致段数暴增，进而导致复杂度起飞，所以下面的区间推平就是为防止这种情况出现。
 
-### 区间赋值/区间推平
+#### 区间赋值/区间推平
 
 ```cpp
 void assign(int l,int r,int x)
@@ -73,7 +73,7 @@ void assign(int l,int r,int x)
 
 注意，要先分裂 $r + 1$ 再分裂 $l$，因为反过来会导致迭代器失效，造成各种奇奇怪怪的 WA&RE。
 
-### 区间操作
+#### 区间操作
 
 ```cpp
 Any perform(int l,int r,...)
@@ -83,7 +83,7 @@ Any perform(int l,int r,...)
 }
 ```
 
-## 2.复杂度
+### 2.复杂度
 
 这种东西一看就是暴力数据结构，但是神奇的是，在保证数据随机并且有区间推平的情况下，复杂度为 $\Omicron(n \log \log n)$，并且常数很优秀。
 
@@ -91,7 +91,7 @@ Any perform(int l,int r,...)
 
 总结就是，用 `set` 实现的是 $\Omicron(n \log \log n)$，`map` 和链表都是 $\Omicron(n \log n)$。
 
-## 3.扩展 ODT
+### 3.扩展 ODT
 
 由上得，ODT 是靠区间推平来维护复杂度的，可是有的出题人，会构造的全是查询的数据来卡掉 ODT。
 
@@ -107,4 +107,4 @@ Any perform(int l,int r,...)
 
 然后，只要段数大于 $B( = \sqrt{n})$ 时，就算一下当前序列，然后重新构造扩展 ODT。
 
-还有一种用法：节点对区间的映射，但是模板都是黑题，不会。
+还有一种用法：结点对区间的映射，但是模板都是黑题，不会。
