--- a/src/content/blog/KMP ACAM.mdx
+++ b/src/content/blog/KMP ACAM.mdx
@@ -101,7 +101,7 @@ inline int Match()
 
 既然结合了 KMP 的思想，那 AC 自动机也应该有个失配指针。因为 Trie 树，我们已经可以维护前缀了，所以，这个失配指针指向**有着最长真后缀的结点**，我们之后把它叫做 $fail$ 指针。
 
-#### $fail$ 指针的构建
+#### Fail 指针的构建
 
 我们可以再次参考 KMP 构建 $next$ 的思想，也就是算过了就不用再算一次，来构建 $fail$，$fail$ 指向的深度一定比自己低，所以得用 BFS 来构建。
 
