--- a/src/content/blog/做题记录.mdx
+++ b/src/content/blog/做题记录.mdx
@@ -429,3 +429,29 @@ $$
 首先转成人 $i$ 的两个位置，就是对置换取逆。
 
 然后你发现，$i,j$ 能交友的条件就是 $a _ i \lt a _ j \wedge b _ i \gt b _ j$，二维偏序形式，排序消去一维，则转为 $i \lt j \wedge b _ i \gt b _ j$，所以一个朋友圈等价于对于任意 $i \lt j,i,j \in S$，有 $b _ i \gt b _ j$，求个最长下降子序列就行了。
+
+### 11.4
+
+虽迟但到的 CSP-S 题解（
+
+#### A 社团招新
+
+首先我们考虑贪心的选最大的，显然会导致选多，然后我们按最大值与次大值的差排序，对于多的那个值，我们选取较小的 $cnt - \frac{n}{2}$ 个将其替换为次大值。
+
+这是对的，因为剩下那两个和一定不会超过 $\frac{n}{2}$。
+
+#### B 道路修复
+
+我们先枚举选的村庄的集合，是 $\Omicron(2 ^ k)$ 的
+
+发现这个 $m$ 比较大，所以我们考虑怎么做到与 $m$ 无关。我们先对原图做一遍 MST，然后只用 MST 里面的边，因为你加入新的边只会更优，而原来就劣的边一定不会去选。这样我们就做到了 $\Omicron(2 ^ k k n \log n)$。
+
+考虑优化掉那个 $\log$，我们可以先对所有边集排序，然后离散化，这样我们就可以用计数排序来做到 $\Omicron(n)$ 排序了，最后总复杂度就是 $\Omicron(m \log m + kn \log kn + 2 ^ k k n)$。
+
+#### C 谐音替换
+
+<p style = "display: none;">欸woc我怎么没想到合起来建串啊艹艹艹</p>
+
+我们考虑将一个变换 $s _ 1 \to s _ 2$ 变为 $ABC \to ADC$，其中 $A,C$ 分别是两个串的最长公共前缀与最长公共后缀。然后对于一个查询同理。则原问题就变成了多模匹配，将变换变为 $A#BD#C$ 插入 ACAM 即可。
+
+注意特判 $|t _ 1| \neq |t _ 2|$。
